...
                                                                <color key="value" systemColor="systemGray5Color"/>
                                                            </userDefinedRuntimeAttribute>
                                                        </userDefinedRuntimeAttributes>
                                                    </view>
                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="4gy-2k-boW">
                                                        <rect key="frame" x="305" y="7" width="50" height="36"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="cardBrandImage" label="card brand image"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="50" id="Tfu-ls-ZRh"/>
                                                            <constraint firstAttribute="height" constant="36" id="kLD-g7-Wi8"/>
                                                        </constraints>
                                                    </imageView>
                                                </subviews>
...
                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="J5F-3T-W9N" userLabel="hview - expiry date + cvc">
                                                <rect key="frame" x="0.0" y="60" width="110" height="50"/>
                                                <subviews>
                                                    <view contentMode="scaleToFill" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="ts8-Kj-GhN" userLabel="Expiry date" customClass="AccessCheckoutUITextField" customModule="AccessCheckoutSDK">
                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="expiryDate" label="Expiry date">
                                                            <bool key="isElement" value="YES"/>
                                                        </accessibility>
                                                        <constraints>
                                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="160" id="1K6-wM-DAF"/>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="nIN-aX-bYI"/>
                                                        </constraints>
...
